# phobos

./: LICENSE  README.md  cache.py  composer.py  config.example.yaml  config.py  llm.py  main.py  pyproject.toml  summarizer.py  telegram.py
install/: install.sh  phobos.service  phobos.timer
sources/: base.py  calendar.py  email.py  news.py  twitter.py  weather.py
tests/: test_base.py  test_cache.py  test_calendar.py  test_composer.py  test_config.py  test_email.py  test_llm.py  test_main.py  test_news.py  test_summarizer.py  test_telegram.py  test_twitter.py  test_weather.py
